--- a/frontend/Sexual_Harrasment_Prevention_Cell/index.html
+++ b/frontend/Sexual_Harrasment_Prevention_Cell/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/sust.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SHPC-SUST</title>
+    <title>SHPPC-SUST</title>
   </head>
   <body>
     <div id="root"></div>
